master: ready to start with the query interaction styles.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div id="presentation">
+  <h1>Lasso</h1>
+  <p>A music downloader</p>
+</div>
+<div id="query-interaction">
+  <div class="search-input">
+    <span class="iconify" data-icon="bx:bx-search-alt"></span>
+    <input type="text" placeholder="What song are you searching?" spellcheck="false">
+    <datalist>
+      <!-- Here goes the real time backend results -->
+    </datalist>
+  </div>
+</div>
