master: ready to start with the links menu.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,8 +6,13 @@
   <div class="search-input">
     <span class="iconify" data-icon="bx:bx-search-alt"></span>
     <input type="text" placeholder="What song are you searching?" spellcheck="false">
-    <datalist>
-      <!-- Here goes the real time backend results -->
-    </datalist>
   </div>
+  <div id="results">
+    <p>Results will appear here</p>
+    <!-- Here goes the real time backend results -->
+  </div>
+</div>
+<div id="not-found-action">
+  Not found song?
+  <a href="">Let's create that one!</a> <!-- Change -->
 </div>
