--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,17 +2,53 @@
 
 :host {
   #presentation {
-    margin: 1em 0;
+    margin: 1.5em 0;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.3em;
     p {
       font-weight: bold;
       color: $darkGray;
     }
   }
   #query-interaction {
+    width: 90%;
+    margin: 2.5em auto 1em;
     .search-input {
-      
+      position: relative;
+      display: flex;
+      align-items: center;
+      svg {
+        position: absolute;
+        height: 100%;
+        font-size: 1.5em;
+        padding-left: 10px;
+        border-radius: $radiusBase 0 0 $radiusBase;
+        color: $darkGray;
+        background-color: $lightGray;
+      }
+      input {
+        width: 100%;
+        padding: 1.25em .5em;
+        text-align: center;
+        border-radius: $radiusBase;
+        border: none;
+        background-color: #E5E5E5;
+        outline: none;
+      }
     }
+    #results {
+      background-color: $lightGray;
+      border-radius: 10px;
+      padding: 5em 0;
+      text-align: center;
+      margin-top: 1em !important;
+      p { color: $darkGray }
+    }
+  }
+  #not-found-action {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    a { color: $midBlue }
   }
 }
