--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -8,7 +8,7 @@
     margin-bottom: 5px;
     pointer-events: none;
     transition-duration: .25s;
-    border-radius: 10px;
+    border-radius: $radiusBase;
     background-color: $lightBlue;
     &.blade-1-anim { opacity: 0 }
     &.blade-3-anim {
