master: added the navlinks.

--- a/src/app/shared/_variables.scss
+++ b/src/app/shared/_variables.scss
@@ -1,6 +1,7 @@
 $lightBlue: #3D84B8;
-$darkGray: #929292;
-$lightGray: #E5E5E5;
 $midBlue: #344FA1;
+$lightGray: #E5E5E5;
+$midGray: #C4C4C4;
+$darkGray: #929292;
 
 $radiusBase: 10px;
