--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,14 +5,10 @@
     margin: 1.5em 0;
     text-align: center;
     font-size: 1.3em;
-    p {
-      font-weight: bold;
-      color: $darkGray;
-    }
+    p { font-weight: bold; color: $darkGray }
   }
   #query-interaction {
-    width: 90%;
-    margin: 2.5em auto 1em;
+    width: 90%; margin: 2.5em auto 1em;
     .search-input {
       position: relative;
       display: flex;
@@ -41,7 +37,7 @@
       border-radius: 10px;
       padding: 5em 0;
       text-align: center;
-      margin-top: 1em !important;
+      margin-top: .7em;
       p { color: $darkGray }
     }
   }
