--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,11 @@
-<nav>
-  <div id="burger-menu">
-    <div class="blade blade-1"></div>
-    <div class="blade blade-2"></div>
-    <div class="blade blade-3"></div>
-  </div>
-</nav>
+<div id="burger-menu" (click)="setOpen()" [ngClass]="{'opened-pos': open}">
+  <div class="line l1" [ngClass]="{'l1-anim': open}"></div>
+  <div class="line l2" [ngClass]="{'l2-anim': open}"></div>
+  <div class="line l3" [ngClass]="{'l3-anim': open}"></div>
+</div>
+<div id="nav-links" [ngClass]="{'opened-links': open}">
+  <a href="">Link 1</a>
+  <a href="">Link 2</a>
+  <a href="">Link 3</a>
+  <a href="">Link 4</a>
+</div>
