master: i restructured some parts of the nabvar and i am passing with the song component.

--- a/src/app/pages/home/components/song/song.component.html
+++ b/src/app/pages/home/components/song/song.component.html
@@ -11,7 +11,8 @@
     <div class="actions">
       <img
         class="download-btn"
-        [src]="getIcon('download')" alt=""/>
+        (click)="setDownload()"
+        [src]="getIcon(downloading ? 'downloading' : 'download')" alt=""/>
       <img
         class="fav-btn"
         (click)="setFav()"
