--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&display=swap');
+@import './app/shared/sass/variables';
 
 * {
   font-family: 'Fira Sans', cursive;
   margin: 0; padding: 0;
 }
+
+a { color: $lightBlue }
