--- a/src/app/shared/components/action-button/action-button.component.scss
+++ b/src/app/shared/components/action-button/action-button.component.scss
@@ -1,7 +1,7 @@
 @import '../../sass/variables';
 
 .action-btn {
-  width: 100%;
+  width: 100%; height: 40px;
   display: flex;
   padding: 13.5px;
   border: none;
@@ -16,4 +16,8 @@
     font-size: 1.15em;
   }
   img { width: 13px }
+  &.go-back {
+    background-color: $passionRed;
+    img { transform: rotate(180deg) }
+  }
 }
