master: the song component is almost responsive, i'll add some actions.

--- a/src/app/pages/home/components/song/song.component.html
+++ b/src/app/pages/home/components/song/song.component.html
@@ -3,7 +3,7 @@
     <img [src]="song.cover" [alt]="song.artist + ' song from the ' + song.album + ' album'">
   </figure>
   <div>
-    <div class="tags">
+    <div class="song-tags">
       <p>{{ song.title }}</p>
       <p>{{ song.artist }}</p>
       <p>{{ song.album }}</p>
