master: the url page responsive is done.

--- a/src/app/pages/create/url/url.component.html
+++ b/src/app/pages/create/url/url.component.html
@@ -7,7 +7,7 @@
       you must to provide a Youtube MP3 URL.
     </p>
   </div>
-  <custom-input placeholder="Song Url" [style]="'width: 95%'"></custom-input>
+  <custom-input placeholder="Song Url"></custom-input>
+  <action-button></action-button>
   <a href="">How can i get my song URL?</a>
-  <action-button [style]="'margin-top: 35%; width: 95%'"></action-button>
 </div>
