--- a/src/app/pages/create/tags/tags.component.html
+++ b/src/app/pages/create/tags/tags.component.html
@@ -9,7 +9,7 @@
     <custom-input placeholder="Album"></custom-input>
     <custom-input placeholder="Genre"></custom-input>
   </div>
-  <div [style]="'display: flex; margin-top: 1em'">
+  <div [style]="'display: flex; margin-top: .5em'" class="actions-btns">
     <action-button [goback]="true"></action-button>
     <action-button [style]="'flex: 1; margin-left: 10px'"></action-button>
   </div>
