--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,13 +2,13 @@
 
 :host {
   .presentation {
-    margin: 1.5em 0;
+    margin-top: 1.5em;
     text-align: center;
     font-size: 1.3em;
     p { font-weight: bold; color: $darkGray }
   }
   .query-interaction {
-    width: 90%; margin: 2.5em auto 1em;
+    width: 90%; margin: 1.25em auto;
     .search-input {
       position: relative;
       display: flex;
