--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,10 @@
 body { overflow-x: hidden } // to hide the horizontal scroll bar
 
 a { color: $lightBlue }
+
+ng-lottie > div {
+  position: absolute; bottom: 0;
+  display: flex; align-items: flex-end;
+  width: 100%;
+  svg { @media (max-width: 595px) { height: auto !important } }
+}
