--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -31,6 +31,7 @@
         border: none;
         background-color: #E5E5E5;
         outline: none;
+        @media (min-width: 768px) { font-size: 15px }
       }
     }
     .results {
@@ -39,7 +40,7 @@
       padding: 5em 0;
       text-align: center;
       margin: .7em auto 0 auto;
-      p { color: $darkGray }
+      p { color: $darkGray; font-size: .9em }
     }
     .search-input, .results {
       max-width: 600px;
