--- a/src/app/pages/home/components/song/song.component.html
+++ b/src/app/pages/home/components/song/song.component.html
@@ -1,6 +1,6 @@
-<div class="song" [attr.data-title]="formatTitle()">
+<div class="song" [attr.data-title]="data.title">
   <figure>
-    <img [src]="data.cover" [alt]="data.artist + ' song from the ' + data.album + ' album'">
+    <img [src]="data.cover" alt="">
   </figure>
   <div>
     <div class="song-tags">
