--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,8 +15,8 @@
   </div>
   <div class="results">
     <p *ngIf="!songs">Results will appear here</p>
-    <div class="songs-list" *ngIf="songs">
-      <song *ngFor="let song of songs | async" [data]="song"></song>
+    <div class="songs-list" *ngIf="songs | async as songsList">
+      <song *ngFor="let song of songsList" [data]="song"></song>
     </div>
   </div>
 </div>
@@ -24,3 +24,7 @@
   Not found song?
   <a href="">Let's create that one!</a> <!-- Change -->
 </div>
+<ng-lottie  
+  [ngClass]="{ 'to-top-lottie': songs }"
+  [options]="lottieOptions"
+  height="50px"></ng-lottie>
