--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,12 +13,13 @@ body { overflow-x: hidden } // to hide the horizontal scroll bar
 a { color: $lightBlue }
 
 ng-lottie {
-  > div {
-    position: fixed; bottom: 0;
-    display: flex; align-items: flex-end;
+  > div {  
+    position: fixed;
+    top: calc(100% - 50px); bottom: 0;
+    display: flex;
+    align-items: flex-end;  
+    svg { @media (max-width: 595px) { height: auto !important } }  
     transition-duration: .25s;
-    width: 100%;
-    svg { @media (max-width: 595px) { height: auto !important } }
   }
-  &.hide-lottie { transform: translateY(100%) }
+  &.to-top-lottie { transform: translateY(100%) }
 }
