--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -25,7 +25,7 @@
       }
       input {
         width: 100%;
-        padding: 1.25em .5em;
+        padding: min(1.25em, 15px) .5em;
         text-align: center;
         border-radius: $radiusBase;
         border: none;
@@ -35,12 +35,15 @@
       }
     }
     .results {
+      overflow: auto;
       background-color: $lightGray;
       border-radius: 10px;
-      padding: 5em 0;
-      text-align: center;
       margin: .7em auto 0 auto;
       p { color: $darkGray; font-size: .9em }
+      &.no-results {
+        text-align: center;
+        padding: 5em 0;
+      }
     }
     .search-input, .results {
       max-width: 600px;
