--- a/src/app/pages/home/components/song/song.component.html
+++ b/src/app/pages/home/components/song/song.component.html
@@ -13,11 +13,6 @@
       [src]="getIcon('download')" alt=""
       iconName="download"
     />
-    <img class="fav"
-      (click)="setFav()"
-      [src]="getIcon('fav')" alt=""
-      iconName="fav"
-    />
     <img class="spotify"
       [src]="getIcon('spotify')" alt=""
       iconName="spotify"
@@ -25,6 +20,10 @@
     <img class="deezer"
       [src]="getIcon('deezer')" alt=""
       iconName="deezer"
+    />
+    <img class="youtube"
+      [src]="getIcon('youtube')" alt=""
+      iconName="youtube"
     />
   </div>
 </div>
