master: i'll start with the loading stuff.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,13 +15,19 @@
   </div>
   <div class="results" (window:scroll)="lottieOnScroll()"
     [ngClass]="{ 'no-results': !songs.length }">
-    <p *ngIf="!songs.length">Results will appear here</p>
-    <ng-container *ngIf="songs.length">
-      <song
-        style="margin: 10px"
-        *ngFor="let song of songs"
-        [data]="song"></song>
-    </ng-container>
+    <ng-lottie
+      [options]="loaderLottie"
+      height="75px"
+      *ngIf="loading; else resultsContainer"></ng-lottie>
+    <ng-template #resultsContainer>
+      <p *ngIf="!songs.length">Results will appear here</p>
+      <ng-container *ngIf="songs.length">
+        <song
+          style="margin: 10px"
+          *ngFor="let song of songs"
+          [data]="song"></song>
+      </ng-container>
+    </ng-template>
   </div>
 </div>
 <div class="not-found-action">
@@ -29,6 +35,7 @@
   <a href="">Let's create that one!</a> <!-- Change -->
 </div>
 <ng-lottie  
+  class="waves-lottie"
   [ngClass]="{ 'top-lottie': songs.length, 'on-scroll': hideLottie }"
-  [options]="lottieOptions"
+  [options]="wavesLottie"
   height="50px"></ng-lottie>
