--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ body {
 
 a { color: $lightBlue }
 
-ng-lottie {
+.waves-lottie {
   > div {  
     position: fixed;
     top: calc(100% - 50px); bottom: 0;
