--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -41,8 +41,10 @@
       margin: .7em auto 0 auto;
       p { color: $darkGray; font-size: .9em }
       &.no-results {
-        text-align: center;
-        padding: 5em 0;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
     .search-input, .results {
@@ -54,5 +56,5 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 1.5em;
-  }
+  }  
 }
