master: i'll start with the new navbar.

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,11 +1,18 @@
-<div id="burger-menu" (click)="setOpen()" [ngClass]="{'opened-pos': open}">
-  <div class="line" id="l1"></div>
-  <div class="line" id="l2"></div>
-  <div class="line" id="l3"></div>
-</div>
-<div id="nav-links" [ngClass]="{'opened-links': open}">
-  <a href="">Link 1</a>
-  <a href="">Link 2</a>
-  <a href="">Link 3</a>
-  <a href="">Link 4</a>
+<div id="nav-links">
+  <a href="">
+    <i class="uil uil-estate"></i>
+    <p>Home</p>
+  </a>
+  <a href="">
+    <i class="uil uil-file-plus-alt"></i>
+    <p>Create</p>
+  </a>
+  <a href="">
+    <i class="uil uil-box"></i>
+    <p>Current package</p>
+  </a>
+  <a href="">
+    <i class="uil uil-comment-info"></i>
+    <p>About me</p>
+  </a>
 </div>
