--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,59 +1,3 @@
 @import '../../sass/variables';
 
-:host {
-  #burger-menu {
-    width: 45px; height: 30px;
-    margin: 20px 0 0 15px;
-    transition: .3s;
-    .line {
-      height: 7px;
-      margin-bottom: 5px;
-      pointer-events: none;
-      transition-duration: .25s;
-      border-radius: $radiusBase;
-      background-color: $lightBlue;
-    }
-    #l2 {
-      position: relative;
-      background-color: transparent;
-      &::before, &::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        @extend .line;
-      }
-      &::before { width: 25% }
-      &::after { width: 67%; right: 0 }
-    }
-    &.opened-pos { margin: 20px 15px 0 calc(100vw - 60px);
-      #l1 { opacity: 0 }
-      #l2 { transform: rotate(-45deg) }
-      #l3 {
-        margin-top: -12px;
-        transform: rotate(45deg);
-        margin-bottom: 0;
-      }
-    }
-  }
-  #nav-links {
-    position: fixed; top: 0; z-index: 1;
-    width: 50%; height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: $lightGray; 
-    border-right: 5px solid $lightBlue;
-    transition-duration: .3s;
-    transform: translateX(calc(-100% + 5px));
-    max-width: 200px;
-    a {
-      background-color: $midGray;
-      width: 90%;
-      padding: 0.5em 0;
-      border-radius: 0 5px 5px 0;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    &.opened-links { transform: initial !important }
-  }
-}
+:host {}
