--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,3 +1,73 @@
 @import '../../sass/variables';
 
-:host {}
+:host {
+  #burger-menu {
+    position: relative; z-index: 2;
+    width: 45px; height: 30px;
+    margin: 20px 0 0 15px;
+    transition-duration: .3s;
+    cursor: pointer;
+    .line {
+      height: 7px;
+      margin-bottom: 5px;
+      pointer-events: none;
+      transition-duration: .25s;
+      border-radius: $radiusBase;
+      background-color: $lightBlue;
+    }
+    #l2 {
+      position: relative;
+      background-color: transparent;
+      &::before, &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        @extend .line;
+      }
+      &::before { width: 25% }
+      &::after { width: 67%; right: 0 }
+    }
+    &.opened {
+      margin: 20px 0 0 min(100%, 240px);
+      #l1 { opacity: 0 }
+      #l2 { transform: rotate(-45deg) }
+      #l3 {
+        margin-top: -12px;
+        transform: rotate(45deg);
+        margin-bottom: 0;
+      }
+      & + #nav-links { transform: initial }
+    }
+  }
+  #nav-links {
+    position: fixed;
+    top: 0; z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%; height: 100vh ;
+    max-width: 300px;
+    background-color: white;
+    border-right: 5px solid #3d84b8;
+    transform: translateX(calc(-100% + 5px));
+    transition-duration: .25s;
+    a {
+      display: flex;
+      align-items: center;
+      width: 75%;
+      font-size: 1.4em;
+      padding: 0.65em;
+      background-color: $lightGray;
+      color: $darkGray;
+      border-radius: 0 10px 10px 0;
+      margin-bottom: 15px;
+      text-decoration: none;
+      i { margin-right: 7px }
+      p { font-size: .7em }
+      &.active {
+        background-color: $lightBlue;
+        color: white;
+      }
+    }
+  }
+}
