master: i started with the new create song module.

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <i class="uil uil-estate"></i>
     <p>Home</p>
   </a>
-  <a routerLink="/create/url"
+  <a routerLink="/create"
     routerLinkActive="active" (click)="open = false">
     <i class="uil uil-file-plus-alt"></i>
     <p>Create song</p>
