master: the custom inputs have the info.

--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,1 +1,5 @@
-<input type="text" [placeholder]="placeholder">
+<div class="custom-input">
+  <input type="text" [name]="name">
+  <label [for]="name">{{ placeholder }}</label>
+  <p class="info" *ngIf="info" [title]="message">?</p>
+</div>
