master: the main form of the create song section is ready(UI)

--- a/src/app/pages/create/main-form/main-form.component.html
+++ b/src/app/pages/create/main-form/main-form.component.html
@@ -4,7 +4,7 @@
     <p>Fill the following fields to continue with the cover</p>
   </div>
   <div class="entries">
-    <custom-input placeholder="Url" info="loreloremloremloremlore"></custom-input>
+    <custom-input placeholder="Url" [info]="message"></custom-input>
     <custom-input placeholder="Title"></custom-input>
     <custom-input placeholder="Artist"></custom-input>
     <custom-input placeholder="Album"></custom-input>
