--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,5 +1,5 @@
 <div class="custom-input">
   <input type="text" [name]="name">
   <label [for]="name">{{ placeholder }}</label>
-  <p class="info" *ngIf="info" [title]="message">?</p>
+  <p class="info" *ngIf="info" [title]="info">?</p>
 </div>
