master: starting with the cover page.

--- a/src/app/pages/create/cover/cover.component.html
+++ b/src/app/pages/create/cover/cover.component.html
@@ -1,1 +1,15 @@
-<p>cover works!</p>
+<div class="presentation">
+  <h2>Add your song cover</h2>
+  <p>If you don’t provide it, we’ll set a default cover</p>
+</div>
+<div class="cover-place">
+  <p>Cover Place</p>
+</div>
+<div class="cover-input">
+  <input type="text" placeholder="Url/File">
+  <button>Upload</button>
+</div>
+<div>
+  <action-button [goback]="true"></action-button>
+  <action-button></action-button>
+</div>
