--- a/src/app/pages/create/main-form/main-form.component.scss
+++ b/src/app/pages/create/main-form/main-form.component.scss
@@ -1,10 +1,8 @@
 @import '../../../shared/sass/variables';
+@import '../../../shared/sass/utils';
 
 .main-form {
-  position: absolute;
-  top: 50%; left: 50%;
-  width: 100%; max-width: 450px;
-  transform: translate(-50%, -50%);  
+  @include centered-abs-form;
   > *:not(a) { margin: 1em }
   .presentation {
     text-align: center;
