master: the cover upload form is ready for now.

--- a/src/app/pages/create/cover/cover.component.html
+++ b/src/app/pages/create/cover/cover.component.html
@@ -9,7 +9,7 @@
   <input type="text" placeholder="Url/File">
   <button>Upload</button>
 </div>
-<div>
+<div class="buttons-group" style="margin-top: 10px">
   <action-button [goback]="true"></action-button>
   <action-button></action-button>
 </div>
