--- a/src/app/pages/create/main-form/main-form.component.html
+++ b/src/app/pages/create/main-form/main-form.component.html
@@ -10,7 +10,7 @@
     <custom-input placeholder="Album"></custom-input>
     <custom-input placeholder="Genre"></custom-input>
   </div>
-  <div class="buttons">
+  <div class="buttons-group">
     <action-button [goback]="true"></action-button>
     <action-button></action-button>
   </div>
