--- a/src/app/shared/sass/_utils.scss
+++ b/src/app/shared/sass/_utils.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 @mixin hide-scrollbar {
   &::-webkit-scrollbar { display: none }
   -ms-overflow-style: none;
@@ -9,4 +11,9 @@
   top: 50%; left: 50%;
   width: 100%; max-width: 450px;
   transform: translate(-50%, -50%);
+}
+
+@mixin default-presentation {
+  text-align: center;
+  p { color: $darkGray }
 }
