--- a/src/app/pages/create/main-form/main-form.component.html
+++ b/src/app/pages/create/main-form/main-form.component.html
@@ -1,18 +1,16 @@
-<div class="main-form">
-  <div class="presentation">
-    <h2>Create your song</h2>
-    <p>Fill the following fields to continue with the cover</p>
-  </div>
-  <div class="entries">
-    <custom-input placeholder="Url" [info]="message"></custom-input>
-    <custom-input placeholder="Title"></custom-input>
-    <custom-input placeholder="Artist"></custom-input>
-    <custom-input placeholder="Album"></custom-input>
-    <custom-input placeholder="Genre"></custom-input>
-  </div>
-  <div class="buttons-group">
-    <action-button [goback]="true"></action-button>
-    <action-button></action-button>
-  </div>
-  <a href="">Where can i find these information?</a>
+<div class="presentation">
+  <h2>Create your song</h2>
+  <p>Fill the following fields to continue with the cover</p>
 </div>
+<div class="entries">
+  <custom-input placeholder="Url" [info]="message"></custom-input>
+  <custom-input placeholder="Title"></custom-input>
+  <custom-input placeholder="Artist"></custom-input>
+  <custom-input placeholder="Album"></custom-input>
+  <custom-input placeholder="Genre"></custom-input>
+</div>
+<div class="btns-group">
+  <action-button [goback]="true"></action-button>
+  <action-button></action-button>
+</div>
+<a href="">Where can i find these information?</a>
