--- a/src/app/pages/package/current-package/current-package.component.html
+++ b/src/app/pages/package/current-package/current-package.component.html
@@ -1,1 +1,8 @@
-<p>current-package works!</p>
+<div class="presentation">
+  <h2>Your package</h2>
+  <p>You’ve added the following songs</p>
+  <div class="package">
+    
+  </div>
+  <a href="">How does the songs package work?</a>
+</div>
